Fix major update integrating with external wisemapping frond end